<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Themed Sandwich</string>
    <string name="action_settings">Settings</string>
    <string name="sandwich_count_question">How many sandwiches?</string>
    <string name="sandwich_count_hint">Enter quantity (up to 5)</string>
    <string name="button_next">Next</string>
    <string name="title_activity_sandwich_studio">Build the sandwich</string>
    <string name="sandwich_number">"Sandwich %1$d of %2$d"</string>
    <string name="bread_options">Bread:</string>
    <string name="wheat_option">Wheat</string>
    <string name="white_option">White</string>
    <string name="rye_option">Rye</string>
    <string name="toppings_options">Toppings:</string>
    <string name="tomato_option">Tomato</string>
    <string name="lattuce_option">Lattuce</string>
    <string name="onion_option">Onion</string>
    <string name="grated_carrot_option">Grated carrot</string>
    <string name="olives_option">Olives</string>
    <string name="sesame_seeds_option">Sesame seeds</string>
    <string name="ham_option">Ham</string>
    <string name="cheese_option">Cheese</string>
    <string name="nothing">nothing</string>
    <string name="place_order">Place my order</string>
    <string name="title_activity_results">Order result</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_sandwich_total">%1$d sandwiches:</string>
    <string name="sandwich_each">Sandwich %1$d:</string>
    <string name="choose_color">Choose a color</string>
    <string name="burger_brown">Burger Brown</string>
    <string name="pig_pink">Pig Pink</string>
    <string name="pref_category_customization">Preferences</string>
    <string name="pref_color_title">Order confirmation color</string>
    <string name="pref_color_summary">Color set used in the confirmation screen</string>
    <string name="activity_app_settings_title">Settings</string>

</resources>
